"1.4 QA [Search] ipad - In resource search the publisher name and resource description has overlapping issue Fixed"

--- a/src/main/resources/css/search/newsearch.css
+++ b/src/main/resources/css/search/newsearch.css
@@ -238,7 +238,11 @@
     cursor:pointer;
     max-height:20px;
 }
-
+#gooruSearchMainContainer .libraryMainContainerBlock .resourceAuthorDetails{
+	white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 #gooruSearchMainContainer .userDetails img{
 	width:30px;
 	height:30px;
